# chat__app

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
chat/: models.py  serializers.py  urls.py  views.py
chat/ws/: consumers.py
config/: asgi.py  settings.py
