[tool.poetry]
name = "chatapp"
version = "0.1.0"
description = ""
authors = ["Almaz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
djangorestframework = "^3.14.0"
channels-redis = "^4.1.0"
channels = {extras = ["daphne"], version = "^4.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
